// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the empty-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "typescriptPage",
        "pageName": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "someOtherPage",
        "pageName": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "fooPage",
        "pageName": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "barPage",
        "pageName": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "privatePage",
        "pageName": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "typescriptPage",
        "pageName": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "someOtherPage",
        "pageName": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "fooPage",
        "pageName": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "barPage",
        "pageName": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "privatePage",
        "pageName": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [
      "No notfound route detected",
      "Multiple routes named home are present",
    ],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "something-else",
        "pageName": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "Routes",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [
      "No notfound route detected",
      "Multiple routes named home are present",
    ],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "something-else",
        "pageName": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "Routes",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "login",
        "pageName": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "signup",
        "pageName": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "forgotPassword",
        "pageName": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "resetPassword",
        "pageName": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newContact",
        "pageName": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editContact",
        "pageName": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contact",
        "pageName": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contacts",
        "pageName": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newPost",
        "pageName": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editPost",
        "pageName": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "post",
        "pageName": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "posts",
        "pageName": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "waterfall",
        "pageName": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "profile",
        "pageName": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "blogPost",
        "pageName": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contactUs",
        "pageName": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "about",
        "pageName": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "login",
        "pageName": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "signup",
        "pageName": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "forgotPassword",
        "pageName": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "resetPassword",
        "pageName": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newContact",
        "pageName": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editContact",
        "pageName": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contact",
        "pageName": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contacts",
        "pageName": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newPost",
        "pageName": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editPost",
        "pageName": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "post",
        "pageName": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "posts",
        "pageName": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "waterfall",
        "pageName": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "profile",
        "pageName": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "blogPost",
        "pageName": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contactUs",
        "pageName": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "about",
        "pageName": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageName": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageName": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;
